--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 	font-weight: bold;
 }
 
-.button {
+.App button {
 	background-color: green;
 	color: white;
 	border: 1px solid blue;
@@ -18,7 +18,15 @@
 	cursor: pointer;
 }
 
-.button:hover {
-	background-color: lightgreen;
+.App button:hover {
+	background-color: lightblue;
 	color: black;
+}
+
+.App button.Red {
+	background-color: red;
+}
+
+.App button.Red:hover {
+	background-color: salmon;
 }
