--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,11 +1,11 @@
-/* .Person {
+.Person {
 	width: 60%;
-	margin: 16px auto;
-	border: 1px solid #eee;
+	margin: 1px auto;
+	border: 10px solid #eee;
 	box-shadow: 0 2px 3px #ccc;
 	padding: 16px;
 	text-align: center;
 }
 @media (min-width: 500px): {
 	width: '450px'
-} */
+}
